tools/flowc/tests/errors/error5.flow
Maybe ::= None, Some;
None();
Some(v : int);

foo(a : None) -> void {
	
}

bar(s : Some) -> void {
	
}

baz(a) {
	foo(a);
	bar(a);
}
